Camera ready draft submitted to Sir

--- a/conc.tex
+++ b/conc.tex
@@ -1,19 +1,27 @@
 \section{Conclusion}
 \label{conclusion}
-Designing database query execution algorithms for PCM platforms
-requires a change in perspective from the traditional assumptions of
-symmetric read and write overheads.  We presented here a variety of
-modified algorithms for the workhorse database operators: \emph{sort},
-\emph{join} and \emph{group-by}, which were constructed with a view
-towards simultaneously reducing both the number of writes and the
-overall query response time. Through detailed experimentation on benchmark
-environments, we showed that substantial improvements on these metrics can
-be obtained as compared to their contemporary PCM-oblivious counterparts.
-Collaterally, the PCM cell lifetimes are also greatly extended by our
-approaches.
+Designing database query execution algorithms for PCM platforms requires a
+change in perspective from the traditional assumptions of symmetric read
+and write overheads.  We presented here a variety of minimally modified algorithms
+for the workhorse database operators: \emph{sort}, \emph{join} and
+\emph{group-by}, which were constructed with a view towards simultaneously
+reducing both the number of writes and the response time. Through detailed
+experimentation on complete TPC-H benchmark queries, we showed that
+substantial improvements on these metrics can be obtained as compared
+to their contemporary PCM-oblivious counterparts.  Collaterally, the
+PCM cell lifetimes are also greatly extended by our approaches.
 
-Note that while our experiments were conducted on a PCM simulator, the
-cycle-accurate nature of the simulator makes it likely that similar
-performance will be exhibited in the real world as well. Moreover,
-our write estimators facilitate the incorporation of these algorithms
-in the query optimizer, as we have shown in our implementation.
+Using our write estimators for uniformly distributed data, we presented a
+redesigned database optimizer, thereby incorporating PCM-consciousness in
+all the layers of the database engine. We also presented initial results
+showing how this can influence plan choices, and improve the write
+performance by a very large extent.  Note that while our experiments
+were conducted on a PCM simulator, the cycle-accurate nature of the
+simulator makes it likely that similar performance will be exhibited in
+the real world as well. In our future work, we would like to design
+write estimators that leverage the metadata statistics to accurately
+predict writes for skewed data. Additionally, we would like to come up with better multi-objective optimization algorithms for query plan selection.
+
+Overall, the results of this paper augur well for an easy migration of
+current database engines to leverage the benefits of tomorrow's PCM-based
+computing platforms.
