--- a/discussion.tex
+++ b/discussion.tex
@@ -1,35 +1,64 @@
 \section{Query Optimizer Integration}
 \label{discussion}
 
-In the earlier sections, given a user query, the standard plan choice
-of the PostgreSQL optimizer was used even with the modified operator
-implementations. That is, while the execution engine was PCM-conscious,
+In the earlier sections, given a user query, the modified operator
+implementations were used for the \emph{standard} plan choice
+of the PostgreSQL optimizer. That is, while the execution engine was PCM-conscious,
 the presence of PCM was completely \emph{opaque} to the optimizer.
-Given the read-write asymmetry of PCM in terms of both latency and wear
+However, given the read-write asymmetry of PCM in terms of both latency and wear
 factor, it is possible that alternative plans, capable of providing better
 performance profiles, may exist in the plan search space. To discover
 such plans, the database query optimizer needs to incorporate PCM
 awareness in both the operator cost models and the plan enumeration
 algorithms.
 
-The current optimizers choose plans using just a latency based costing mechanism. We revise these models to account for the additional latency incurred during writes. Additionally, we introduce a new metric of \emph{write cost} in the operator cost model, representing the incurred writes for a plan, using the estimators described in Sections~\ref{sort} to \ref{gby}. We henceforth refer to the latency cost and the write cost of a plan as LC and WC, respectively. 
+Current query optimizers typically choose plans using a latency-based
+costing mechanism. We revise these models to account for the additional
+latency incurred during writes. Additionally, we introduce a new metric of
+\emph{write cost} in the operator cost model, representing the incurred
+writes for a plan, using the estimators described in Sections~\ref{sort}
+to \ref{gby}. We henceforth refer to the latency cost and the write cost
+of a plan as {\bf LC} and {\bf WC}, respectively.
 
-We redesign the query optimizer to now allow a user defined parameter which we call the \emph{slack} denoted by $\lambda$. The slack represents the maximum relative slowdown, compared to the LC-optimal query plan, that is acceptable to the user in lieu of getting better write performance. That is, if the LC of the LC-optimal execution plan $P_o$ is $c_o$ and the LC of an alternate plan $P_i$ is $c_i$, the user is willing to accept $P_i$ as the final execution plan if $c_i \le (1+\lambda) c_o$. The $P_i$ with the least WC satisfying this equation is considered the WC-optimal plan.
+A new user-defined parameter, called the \emph{latency slack}, is
+incorporated in the query optimizer.  This slack, denoted by $\lambda$,
+represents the maximum relative slowdown, compared to the LC-optimal
+query plan, that is acceptable to the user in lieu of getting better
+write performance. Specifically, if the LC of the LC-optimal execution
+plan $P_o$ is $C_o$ and the LC of an alternate plan $P_i$ is $C_i$, the
+user is willing to accept $P_i$ as the final execution plan if $C_i \le
+(1+\lambda) C_o$. The $P_i$ with the least WC satisfying this equation
+is considered the WC-optimal plan.
 
-With the new metric in place, we need to revise the plan enumeration process during the planning phase. This is because the native optimizer propagates just the LC-optimal and interesting order plans through the internal nodes of the dynamic programming lattice which can lead to pruning of potential WC-optimal plans. Propagating the \emph{entire} list of sub-plans at each internal node, on the other hand, can end up with an exponential search space at the root node. We use a heuristic propagation mechanism at each internal node using an algorithmic parameter \emph{local threshold} $\lambda_l$ ($\ge\lambda$). Let  $P_i^'$ and $P_o^'$ be a sub-plan and the LC-optimal sub-plan at a node, respectively, with $c_i^'$ and $c_o^'$ being their corresponding LC values. Now, along with the LC-optimal and interesting order sub-plans, we also propagate $P_i^'$ with the \emph{least} WC that satisfies $c_i^{'} \le (1+\lambda_l) c_o^{'}$. We observed that keeping $\lambda_l = \lambda$ gave reasonably good results in this regard.
+With the new metric in place, we need to revise the plan enumeration
+process during the planning phase. This is because the native optimizer
+propagates just the LC-optimal (and interesting order plans) through
+the internal nodes of the dynamic programming lattice, which may lead
+to pruning of potential WC-optimal plans. On the other hand, propagating
+the \emph{entire} list of sub-plans at each internal node can end up in
+an exponential blowup of the search space.  As a via media between these
+two extremes, we use a heuristic propagation mechanism at each internal
+node using an algorithmic parameter, \emph{local threshold} $\lambda_l$
+($\ge\lambda$). Let  $p_i$ and $p_o$ be a sub-plan and the LC-optimal
+sub-plan at a node, respectively, with $c_i$ and $c_o$ being their
+corresponding LC values. Now, along with the LC-optimal and interesting
+order sub-plans, we also propagate $p_i$ with the \emph{least} WC that
+satisfies $c_i \le (1+\lambda_l) c_o$. We observed that
+having $\lambda_l = \lambda$ gave reasonably good results in this respect.
 
-In light of these modifications, let
-us revisit Query Q13, for which the default plan was shown in
-Figure~\ref{fig:plan_trees}(a). With just the revised latency costs ($\lambda$ = 0), we now got a new execution plan wherein the
-merge left join between the \textit{customer} and \textit{orders}
-tables is replaced by a hash left join.
-The relative performance of
-these two alternatives with regard to PCM Writes and Cycles, are shown
-in Figures~\ref{fig:perf_comp}(a) and (b), respectively. We observe
-here that there is a \emph{huge difference} in both the query response times as well as writes overheads for both the plans.
-Specifically, the alternative plan reduces the writes by well over an
-order of magnitude!
-As we gradually increased the value of slack, we didn't notice any change in plans. When the slack was made to be as large as 5, we observed that the hash left join gave way to nested loop left join, clearly indicating that it gives write savings at a steep latency cost.
+In light of these modifications, let us revisit Query Q13, for which
+the default plan was shown in Figure~\ref{fig:plan_trees}(a). With
+just the revised latency costs (i.e. $\lambda$ = 0), the optimizer
+identified a new execution plan wherein the merge left-join between the
+\textit{customer} and \textit{orders} tables is replaced by a hash left-join.  The relative performance of these two alternatives with regard to
+PCM Writes and Cycles are shown in Figure~\ref{fig:perf_comp}(a). We observe here that there is a \emph{huge difference}
+in both the query response times as well as writes overheads for both
+the plans.  Specifically, the alternative plan reduces the writes by
+well over an order of magnitude!  As we gradually increased the latency
+slack value, we initially didn't notice any change in plans. However,
+when the slack was made as large as 5, the hash left-join gave way to
+nested loop left-join, clearly indicating that it gives write savings
+at a steep increase in latency cost.
 
 
 \begin{figure}[htbp]
@@ -62,52 +91,12 @@ As we gradually increased the value of slack, we didn't notice any change in pla
 
 To put matters into perspective, Figure~\ref{fig:perf_comp}(b) summarizes
 the relative performance benefits obtained as the database layers are
-gradually made PCM-conscious (in the figure, the labels Opt and Exec refer to Optimizer and Executor, respectively, while PCM-O and PCM-C
-refer to PCM-Oblivious and PCM-Conscious, respectively). For the sake of completeness, we have also added results for the case when the Optimizer is PCM-C but the Executor is PCM-O (last column). The results clearly indicate that future query optimizers for PCM-based architectures need to incorporate PCM-Consciousness at \emph{both} the Optimizer and the Executor level in order to get the best performance while executing a given query.
-
-
-
-
-\begin{comment}
-\begin{figure}[h]
-	%\centering
-	\subfloat[Database layers]{
-	\includegraphics[width=4cm]{db_levels.png}
-	}
-   	\subfloat[Q13 alternate plan]{
-   	\begin{tikzpicture}[scale=., transform shape]
-
-\tikzstyle{every node} = [rectangle, fill=gray!5]
-
-\node (d) at (0,3) {Index Scan / Filter};
-\node (c) at (0,1.5) {CUSTOMER};
-
-\node (s) at (3,3) {Hash};
-\node (p) at (3,2.25) {Seq. Scan / Filter};
-\node (a) at (3,1.5) {ORDERS};
-
-\node (e) at (1.5,4) {Hash Left Join};
-\node (f) at (1.5,5)  {Group Aggregate};
-\node (g) at (1.5,6)  {Hash Aggregate};
-\node (h) at (1.5,7)  {Sort};
-
-
-\draw[-] (c) -- (d);
-\draw[-] (a) -- (p);
-\draw[-] (d) -- (e);
-\draw[-] (p) -- (s);
-\draw[-] (s) -- (e);
-\draw[-] (e) -- (f);
-
-\draw[-] (f) -- (g);
-\draw[-] (g) -- (h);
-
-\end{tikzpicture}
-   	}
-  %\centering                                                                                             
-
-\caption{Alternative Execution Plans for Query Q13}
-	\label{fig:layers}
-	
-\end{figure}
-\end{comment}
+gradually made PCM-conscious (in the figure, the labels Opt and Exec
+refer to Optimizer and Executor, respectively, while PCM-O and PCM-C
+refer to PCM-Oblivious and PCM-Conscious, respectively). For the sake of
+completeness, we have also added results for the case when the Optimizer
+is PCM-C but the Executor is PCM-O (last column). The results clearly
+indicate that future query optimizers for PCM-based architectures need
+to incorporate PCM-Consciousness at \emph{both} the Optimizer and the
+Executor level in order to get the best performance while executing a
+given query.
