--- a/framework.tex
+++ b/framework.tex
@@ -1,26 +1,29 @@
 \section{Problem Framework}
-\label{assumptions}
+\label{sec:framework}
 In this section, we overview the problem framework, the assumptions made
 in our analysis, and the notations used in the sequel.
 
-As mentioned in the Introduction, we model the \model{} memory
-organization (Figure~\ref{fig:pcm_models} (c)). The DRAM buffer is of
-size $D$ and is organized in a \emph{K-way set-associative} manner, like the higher level cache memories. Moreover, its operation is also identical to that of an \emph{inclusive} cache in the memory hierarchy; fetching a new DRAM line (256B in our experimental setup) from PCM each time there is a DRAM miss. The last level cache in turn fetches its data from the DRAM buffer.
+We model the \model{} memory organization (Figure~\ref{fig:pcm_models}
+(c)). The DRAM buffer is of size $D$ and organized in a \emph{K-way
+set-associative} manner, like the higher-level cache memories. Moreover,
+its operation is identical to that of an \emph{inclusive} cache in the
+memory hierarchy -- fetching a new DRAM line from PCM each time there
+is a DRAM miss. The last level cache in turn fetches its data from the
+DRAM buffer.
 
-A \textit{data-comparison write (DCW)} scheme \cite{write} is used for
+We assume that the writes to PCM are in the unit of words (4B) and are incurred only when a data block is evicted from DRAM to PCM. A \textit{data-comparison write (DCW)} scheme \cite{write} is used for
 the writing of PCM memory blocks during eviction from DRAM -- in this
 scheme, the memory controller compares the existing PCM block to the newly
 evicted DRAM block, and selectively writes back only the modified words.
 Further, \textit{N-Chance}~\cite{nchance} is used as the DRAM eviction
-policy due to its preference
-for evicting non-dirty entries over dirty candidates, thereby saving
-on writes.
+policy due to its preference for evicting non-dirty entries, thereby
+saving on writes. The failure recovery mechanism for updates is orthogonal to our work and hence not discussed in this paper.
 
 As described above, the simulator implements a realistic DRAM
 buffer. However, in our write analyses and estimators, we assume for
 tractability that there are no conflict misses in the DRAM. Thus, for
 any operations dealing with data whose size is within the DRAM capacity,
-our analysis assumes no evictions and consequently no writes.
+our analysis assumes no evictions and consequently no writes. This assumption was validated in Section \ref{sec:validation}.
 
 With regard to the operators, we use $R$ to denote the input relation
 for the \textit{sort} and \textit{group-by} unary operators.  Whereas,
@@ -28,8 +31,8 @@ for the binary \textit{hash join} operator, $R$ is used to denote the
 smaller relation, on which the hash table is constructed, while $S$
 denotes the probing relation. 
 
-We assume that all the input relations are completely PCM-resident.
-Further, for simplicity of presentation, we assume that the sort,
+We assume that all input relations are completely PCM-resident.
+Further, for presentation simplicity, we assume that the sort,
 hash-join and group-by expressions are on single relational attributes --
 the extension to multiple attributes is straightforward.
 
