--- a/paper.tex
+++ b/paper.tex
@@ -23,6 +23,10 @@
 \usepackage{xcolor,colortbl}
 \usepackage{breqn}
 
+\newcommand{\model}{DRAM\_HARD}
+\newcommand{\modelExplicit}{DRAM\_SOFT}
+\newcommand{\modelPcmRam}{PCM\_RAM}
+
 %Hacks to save space
 \usepackage{times}
 \def\baselinestretch{0.98} 
@@ -30,13 +34,6 @@
 %\usepackage[small,compact]{titlesec}
 %\usepackage[small,it]{caption}
 
-
-
-\newcommand{\model}{DRAM\_HARD}
-\newcommand{\modelExplicit}{DRAM\_SOFT}
-\newcommand{\modelPcmRam}{PCM\_RAM}
-
-%\newcommand{\jhcomment}[1]{\noindent {\bf \\JH: #1 \\}}
 \newcommand{\jhcomment}[1]{}
 
 \definecolor{c1}{RGB}{239,247,245}
@@ -49,11 +46,7 @@
 \begin{document}
 
 \title{
-\vspace*{-0.5in}
-{\large \bf \hfill
-\underline{Third Draft / \today}} \\
-\vspace*{0.1in} 
-On Improving Write Performance in PCM Databases}
+Towards Making Databases PCM-Compliant}
 % Three authors sharing the same affiliation.
 \author{Vishesh Garg, Abhimanyu Singh, and Jayant R. Haritsa}
 %
@@ -63,40 +56,11 @@ On Improving Write Performance in PCM Databases}
        }
           
           
-\maketitle
-%\markboth{\LaTeXe{} Class for Lecture Notes in Computer
-%Science}{\LaTeXe{} Class for Lecture Notes in Computer Science}
-%\thispagestyle{empty}
-%\begin{flushleft}
-%\LARGE\bfseries Instructions for Authors\\
-%Coding with \LaTeX\\[2cm]
-%\end{flushleft}
-%\rule{\textwidth}{1pt}
-%\vspace{2pt}
-%\begin{flushright}
-%\Huge
-%\begin{tabular}{@{}l}
-%\LaTeXe{} Class\\
-%for Lecture Notes\\
-%in Computer Science\\[6pt]
-%{\Large Version 2.4}
-%\end{tabular}
-%\end{flushright}
-%\rule{\textwidth}{1pt}
-%\vfill
-%\begin{flushleft}
-%\large\itshape
-%\begin{tabular}{@{}l}
-%{\Large\upshape\bfseries Springer}\\[8pt]
-%Berlin\enspace Heidelberg\enspace New\kern0.1em York\\[5pt]
-%Barcelona\enspace Budapest\enspace Hong\kern0.2em Kong\\[5pt]
-%London\enspace Milan\enspace Paris\enspace\\[5pt]
-%Santa\kern0.2em Clara\enspace Singapore\enspace Tokyo
-%\end{tabular}
-%\end{flushleft}
-%
 
-%
+         
+          
+\maketitle
+
 \input{abstract}
 
 \input{intro}
@@ -113,15 +77,11 @@ On Improving Write Performance in PCM Databases}
 
 \input{discussion}
 
-%\input{relwork}
-
 \input{conc}
 
 
 \bibliographystyle{abbrv}
 
 \bibliography{sigproc}
-
-\input{appendix}
 
 \end{document}
